--- a/bin/template.ejs
+++ b/bin/template.ejs
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title></title>
+    <title><%=htmlWebpackPlugin.options.title%></title>
     <meta charset='utf-8' />
     <meta name='renderer' content='webkit' />
     <meta name='viewport' content='width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no'/>
@@ -25,8 +25,6 @@
             document.body.appendChild(script);
         }
     </script>
-    <script src="//m.img4399.com/rds/base/js/gb4399_jssdk-ex.js"></script>
-    <script src="//m.img4399.com/rds/base/js/gb4399_jssdk.min.js"></script>
     <!-- built files will be auto injected -->
     <%=htmlWebpackPlugin.options.slot%>
 </body>
